# SpatialLeiden

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
docs/source/: api.rst  conf.py  index.rst  installation.rst  usage.md
docs/source/api/: gpu.rst
spatialleiden/: __init__.py  _multiplex_leiden.py  _resolution_search.py  _utils.py  gpu.py
