[build-system]
requires      = ["setuptools>=61.0.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"


[project]
name            = "spatialleiden"
description     = "Implementation of multiplex Leiden for analysis of spatial omics data."
readme          = { file = "README.md", content-type = "text/markdown" }
license         = { file = "LICENSE" }
requires-python = ">=3.10"
dynamic         = ["version"]

authors = [
    { name = "Niklas Müller-Bötticher", email = "niklas.mueller-boetticher@charite.de" },
    { name = "Shashwat Sahay", email = "shashwatsahay.rsg@gmail.com" },
]
dependencies = [
    "anndata",
    "igraph",
    "leidenalg~=0.10.2",
    "numpy>=1.21",
    "scanpy",
    "scipy>=1.9",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]

[project.optional-dependencies]
docs = ["sphinx", "sphinx-copybutton", "sphinx-rtd-theme", "squidpy", "myst-nb"]
dev  = ["spatialleiden[docs]", "pre-commit"]

[project.urls]
Homepage      = "https://github.com/HiDiHlabs/SpatialLeiden"
Documentation = "https://spatialleiden.readthedocs.io"
Repository    = "https://github.com/HiDiHlabs/SpatialLeiden"
Issues        = "https://github.com/HiDiHlabs/SpatialLeiden/issues"


[tool]

[tool.setuptools.packages.find]
include = ["spatialleiden"]

[tool.setuptools_scm]


[tool.isort]
profile = "black"

[tool.black]
target-version = ["py310", "py311", "py312", "py313"]

[tool.ruff]
target-version = "py310"

[tool.mypy]
python_version         = "3.10"
ignore_missing_imports = true
warn_no_return         = false
packages               = "spatialleiden"

[tool.codespell]
ignore-words-list = "coo"
