[build-system]
requires      = ["setuptools>=77.0.3", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"


[project]
name            = "spatialleiden"
description     = "Implementation of multiplex Leiden for analysis of (multimodal) spatial omics data."
readme          = { file = "README.md", content-type = "text/markdown" }
license         = "MIT"
license-files   = ["LICENSE"]
requires-python = ">=3.10"
dynamic         = ["version"]

authors = [
    { name = "Niklas Müller-Bötticher", email = "niklas.mueller-boetticher@charite.de" },
    { name = "Shashwat Sahay", email = "shashwatsahay.rsg@gmail.com" },
]
dependencies = ["igraph", "leidenalg~=0.10.2", "numpy>=1.21", "scipy>=1.9"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-copybutton",
    "sphinx-rtd-theme",
    "anndata>=0.10",
    "scanpy",
    "squidpy",
    "dask<2025",         # incompatibility of squidpy with dask >= 2025
    "myst-nb",
]
dev = ["spatialleiden[docs]", "mudata~=0.3", "pre-commit"]

[project.urls]
Homepage      = "https://github.com/HiDiHlabs/SpatialLeiden"
Documentation = "https://spatialleiden.readthedocs.io"
Repository    = "https://github.com/HiDiHlabs/SpatialLeiden"
Issues        = "https://github.com/HiDiHlabs/SpatialLeiden/issues"


[tool]

[tool.setuptools.packages.find]
include = ["spatialleiden"]

[tool.setuptools_scm]


[tool.ruff]
target-version = "py310"

fix        = true
show-fixes = true

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
python_version         = "3.10"
ignore_missing_imports = true
warn_no_return         = false
packages               = "spatialleiden"
plugins                = "numpy.typing.mypy_plugin"

[tool.codespell]
ignore-words-list = "coo"
